front to back + info shop back to front

--- a/views/game.ejs
+++ b/views/game.ejs
@@ -100,7 +100,7 @@
                     <!-- ----------------------------------------------------------------------- -->
                     <div id="left-page" class="rubric">
                         <!-- ----------------------------- Ressources ------------------------------ -->
-                        <div class="elec 1 clickable" style="display:block;">
+                        <div disable class="elec 1 clickable" style="display:block;">
                             <p>Coup de Foudre</p>
                             <p style="display: none;">Rapide description de coup de foudre</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
@@ -111,7 +111,7 @@
                             <button class="buy-button" style="display: none;">Acheter</button>
                         </div>
 
-                        <div class="eau 1 clickable" style="display: none;">
+                        <div disable class="eau 1 clickable" style="display: none;">
                             <p>Hâche 2 Eaux</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
@@ -122,7 +122,7 @@
                             <button class="buy-button" style="display: none;">Acheter</button>
                         </div>
 
-                        <div class="cartons 1 clickable" style="display: none;">
+                        <div disable class="cartons 1 clickable" style="display: none;">
                             <p>Jean Balle</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
@@ -133,7 +133,7 @@
                             <button class="buy-button" style="display: none;">Acheter</button>
                         </div>
 
-                        <div class="etain 1 clickable" style="display: none;">
+                        <div disable class="etain 1 clickable" style="display: none;">
                             <p>Casto là bas</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
@@ -146,58 +146,58 @@
 
                         <!-- ------------------------------ Personnel ------------------------------ -->
 
-                        <div class="inge clickable" style="display: none;">
+                        <div class="inge 1 clickable" style="display: none;">
                             <p>Ingénieur 1</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
                         </div>
-                        <div class="inge clickable" style="display: none;">
+                        <div class="inge 2 clickable" style="display: none;">
                             <p>Ingénieur 2</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
                         </div>
 
-                        <div class="super clickable" style="display: none;">
+                        <div class="super 1 clickable" style="display: none;">
                             <p>Superviseur 1</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
                         </div>
-                        <div class="super clickable" style="display: none;">
+                        <div class="super 2 clickable" style="display: none;">
                             <p>Superviseur 2</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
                         </div>
 
-                        <div class="maint clickable" style="display: none;">
+                        <div class="maint 1 clickable" style="display: none;">
                             <p>Maintenance 1</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
                         </div>
-                        <div class="maint clickable" style="display: none;">
+                        <div class="maint 2 clickable" style="display: none;">
                             <p>Maintenance 2</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
                         </div>
 
-                        <div class="menage clickable" style="display: none;">
+                        <div class="menage 1 clickable" style="display: none;">
                             <p>Ménage 1</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
                         </div>
-                        <div class="menage clickable" style="display: none;">
+                        <div class="menage 2 clickable" style="display: none;">
                             <p>Ménage 2</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
                         </div>
 
                         <!-- -------------------------------- Neuf --------------------------------- -->
-                        <div class="manix 0 clickable" style="display: none;">
+                        <div disable class="manix 0 clickable" style="display: none;">
                             <p>Poste à souder</p>
                             <p>Niveau 1</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
                         </div>
-                        <div class="manix 1 clickable" style="display: none;">
+                        <div disable class="manix 1 clickable" style="display: none;">
                             <p>Assembleur de précision</p>
                             <p>Niveau 1</p>
                             <p style="display: none;">Rapide description</p>
@@ -245,12 +245,12 @@
 
                         <!-- ------------------------------ Occasions ------------------------------ -->
 
-                        <div buyable class="own clickable" style="display: none;">
+                        <div disable class="own clickable" style="display: none;">
                             <p> Rien n'est à vendre<br>pour le moment</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Supprimer</button>
                         </div>
-                        <div buyable class="j1 clickable" style="display: none;">
+                        <div disable class="j1 clickable" style="display: none;">
                             <p>Rien n'est à vendre<br>pour le moment</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
@@ -309,45 +309,45 @@
 
                         <!-- ------------------------------ Personnel ------------------------------ -->
 
-                        <div class="inge clickable" style="display: none;">
+                        <div class="inge 3 clickable" style="display: none;">
                             <p>Ingénieur 3</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
                         </div>
-                        <div class="inge clickable" style="display: none;">
+                        <div class="inge 4 clickable" style="display: none;">
                             <p>Ingénieur 4</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
                         </div>
 
-                        <div class="super clickable" style="display: none;">
+                        <div class="super 3 clickable" style="display: none;">
                             <p>Superviseur 3</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
                         </div>
-                        <div class="super clickable" style="display: none;">
+                        <div class="super 4 clickable" style="display: none;">
                             <p>Superviseur 4</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
                         </div>
 
-                        <div class="maint clickable" style="display: none;">
+                        <div class="maint 3 clickable" style="display: none;">
                             <p>Maintenance 3</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
                         </div>
-                        <div class="maint clickable" style="display: none;">
+                        <div class="maint 4 clickable" style="display: none;">
                             <p>Maintenance 4</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
                         </div>
 
-                        <div class="menage clickable" style="display: none;">
+                        <div class="menage 3 clickable" style="display: none;">
                             <p>Ménage 3</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
                         </div>
-                        <div class="menage clickable" style="display: none;">
+                        <div class="menage 4 clickable" style="display: none;">
                             <p>Ménage 4</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
@@ -355,13 +355,13 @@
 
                         <!-- -------------------------------- Neuf --------------------------------- -->
 
-                        <div class="manix 2 clickable" style="display: none;">
+                        <div disable class="manix 2 clickable" style="display: none;">
                             <p>Assembleur mécanique</p> 
                             <p> Niveau 1</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
                         </div>
-                        <div class="manix 3 clickable" style="display: none;">
+                        <div disable class="manix 3 clickable" style="display: none;">
                             <p>Assembleur général</p>
                             <p> Niveau 1</p>
                             <p style="display: none;">Rapide description</p>
@@ -409,12 +409,12 @@
 
                         <!-- ------------------------------ Occasions ------------------------------ -->
 
-                        <div buyable class="j2 clickable" style="display: none;">
+                        <div disable class="j2 clickable" style="display: none;">
                             <p>Rien n'est à vendre<br>pour le moment</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
                         </div>
-                        <div buyable class="j3 void clickable" style="display: none;">
+                        <div disable class="j3 void clickable" style="display: none;">
                             <p>Rien n'est à vendre<br>pour le moment</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
