bug idRoom, allRooms tab -> obj

--- a/views/game.ejs
+++ b/views/game.ejs
@@ -480,6 +480,7 @@
 
     <!-- ------------------------------- Script -------------------------------- -->
     <script src="JS/game.js" type="module"></script>
+    <script src="JS/http.js"></script>
 </body>
 
 </html>
