--- a/views/game.ejs
+++ b/views/game.ejs
@@ -58,7 +58,7 @@
     <div id="myMenuSortie">
         <h1 id="title_menuSortie">Titre</h1>
         <div id="SortiWrap">
-           <!-- Bla -->
+            <!-- Bla -->
         </div>
     </div>
 
@@ -71,9 +71,24 @@
         <!-- Progress Bar -->
         <div id="top">
             <div class="containers">
-                <div class="progress-container">Social</div>
-                <div class="progress-container">Economic</div>
-                <div class="progress-container">Ecologic</div>
+                <div>
+                    <div class="progress-container">
+                        <div class="progress"></div>
+                    </div>
+                    <p>Social</p>   
+                </div>
+                <div>
+                    <div class="progress-container">
+                        <div class="progress"></div>
+                    </div>
+                    <p>Economique</p>
+                </div>
+                <div>
+                    <div class="progress-container">
+                        <div class="progress"></div>
+                    </div>
+                    <p>Ecologique</p>
+                </div>
             </div>
 
             <div>
