--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,11 +28,11 @@
                 <tr>
                     <td>
                         <a href="/" title="Home page">
-                            <img src="img/ZephyrStudio_logo.png" alt="Logo" />
+                            <img src="img/DontCollapse_logo.png" alt="Logo" />
                         </a>
                     </td>
                     <td>
-                        <h1>Zephyr Studio</h1>
+                        <h1>Don't Collapse</h1>
                     </td>
                 </tr>
             </table>
@@ -42,10 +42,10 @@
             <table>
                 <tr>
                     <td>
-                        <a href="/rules" title="Rules page" class="nav_link">Rules</a>
+                        <a href="/rules" title="Rules page" class="nav_link">Regles du jeu</a>
                     </td>
                     <td>
-                        <a href="/lobby" title="Click to play" class="btn">Play</a>
+                        <a href="/lobby" title="Click to play" class="btn">Jouer</a>
                     </td>
                 </tr>
             </table>
@@ -54,15 +54,15 @@
 
     <main class="home-main" id="home_main">
         <!-- Text displayed in the home page -->
-        <img src="img/DontCollapse_logo.png" alt="Don't Collapse logo">
         <section class="home-content">
-            <h1>Don't Collapse</h1>
+            <h1>Don't <br>Collapse</h1><br><br>
             <h2>A game by Zephyr Studio</h2>
-
+            
             <section class="btn_xl">
-                <a href="/lobby" title="Click to play">Play</a>
+                <a href="/lobby" title="Click to play">Jouer</a>
             </section>
         </section>
+        <img src="img/DontCollapse_log.png" alt="Don't Collapse logo">
     </main>
 
     <footer>
