--- a/views/rules.ejs
+++ b/views/rules.ejs
@@ -28,11 +28,11 @@
                 <tr>
                     <td>
                         <a href="/" title="Home page">
-                            <img src="img/ZephyrStudio_logo.png" alt="Logo" />
+                            <img src="img/DontCollapse_logo.png" alt="Logo" />
                         </a>
                     </td>
                     <td>
-                        <h1>Zephyr Studio</h1>
+                        <h1>Don't Collapse</h1>
                     </td>
                 </tr>
             </table>
@@ -42,10 +42,10 @@
             <table>
                 <tr>
                     <td>
-                        <a href="/rules" title="Rules page" class="nav_link">Rules</a>
+                        <a href="/" title="Rules page" class="nav_link">Retour</a>
                     </td>
                     <td>
-                        <a href="/lobby" title="Click to play" class="btn">Play</a>
+                        <a href="/lobby" title="Click to play" class="btn">Jouer</a>
                     </td>
                 </tr>
             </table>
@@ -54,23 +54,23 @@
 
     <main class="rules-main" id="home_main">
         <!-- Text displayed in the home page -->
+        <h1>Rules :</h1>
         <section class="rules-content">
-            <h1>Rules :</h1>
             <p>
                 To win this game, you must sheer all of your enemy shepard sheeps. To achieve this mission, some weapons
                 are
                 available :
             </p>
             <ul>
-                <li><strong>Sheers :</strong> The basic weapon, sheer the target point;</li>
-                <li><strong>Strimmer :</strong> <i>Only once during the game,</i> cut the 9 cases near to the target
+                <li><strong>- Sheers :</strong> The basic weapon, sheer the target point;</li>
+                <li><strong>- Strimmer :</strong> <i>Only once during the game,</i> cut the 9 cases near to the target
                     point;
                 </li>
-                <li><strong>Baldness epidemic :</strong> <i>Only once during the game,</i> Sheer 5 cases near to the
+                <li><strong>- Baldness epidemic :</strong> <i>Only once during the game,</i> Sheer 5 cases near to the
                     target
                     point;
                 </li>
-                <li><strong>Wolf :</strong> <i>Only once during the game,</i> Sheer a whole flock if it contains only 2
+                <li><strong>- Wolf :</strong> <i>Only once during the game,</i> Sheer a whole flock if it contains only 2
                     sheeps or
                     less.</li>
             </ul>
