--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -1,4 +1,11 @@
 @charset "UTF-8";
+@font-face {
+  font-family: 'Koulen';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/koulen/v25/AMOQz46as3KIBPeWgg.ttf) format('truetype');
+}
 /* -------------------------------------------------------------------------- */
 /*                               Some variables                               */
 /* -------------------------------------------------------------------------- */
@@ -10,8 +17,8 @@ body {
   -moz-user-select: none;
   -webkit-user-select: none;
   background-color: #383331;
-  background-image: url(/img/usine_bg.png);
-  background-size: contain;
+  background-image: url(/img/blob-haikei.svg);
+  background-size: cover;
   background-position: center;
   background-attachment: fixed;
   background-repeat: no-repeat;
@@ -20,15 +27,17 @@ body {
   margin: 0;
 }
 .btn_xl a {
-  font-size: 1.5rem;
-  color: #eee;
+  font-size: 2.5rem;
+  color: #f5dba6;
   text-decoration: none;
   text-align: center;
-  font-family: 'Aclonica', sans-serif;
-  border: 4px solid #f5dba6;
+  font-family: "Koulen", sans-serif;
+  border: 3px solid #f5dba6;
   border-radius: 10px;
-  text-shadow: 1px 2px 3px #000;
-  padding: 1% 7% 1%;
+  text-shadow: 1px 1px 2px #000;
+  padding: 0% 5% 0%;
+  letter-spacing: 0.2rem;
+  font-weight: bold;
 }
 .btn_xl a:hover {
   background-color: #f5dba6;
@@ -36,18 +45,18 @@ body {
 h1 {
   font-size: 2.5rem;
   text-shadow: 1px 2px 3px black;
-  font-family: 'KoHo', sans-serif;
+  font-family: 'Koulen', sans-serif;
 }
 .btn {
   font-size: 1.5rem;
-  padding-left: 30px;
-  padding-right: 30px;
+  padding-left: 50px;
+  padding-right: 50px;
   padding-bottom: 5px;
   padding-top: 5px;
-  border: 3px solid #f5dba6;
+  border: 3px solid #be2d32;
   border-radius: 10px;
-  background-color: #f5dba6;
-  text-shadow: 1px 2px 3px black;
+  background-color: #be2d32;
+  text-shadow: 1px 1px 3px black;
   cursor: pointer;
 }
 /* -------------------------------------------------------------------------- */
@@ -58,17 +67,16 @@ header {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-pack: distribute;
-  justify-content: space-around;
+  justify-content: space-between;
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
   background-color: transparent;
-  width: 75%;
+  width: 90%;
   margin: auto;
 }
 header .logo table {
   width: 100%;
-  max-width: 900px;
   margin: 0 auto;
   text-align: center;
   border: 2px solid none;
@@ -77,15 +85,19 @@ header .logo table {
 header .logo table td {
   border: 1px solid none;
   color: #eee;
-  padding: 2.5rem;
-  font-family: 'KoHo', sans-serif;
+  font-family: 'Koulen', sans-serif;
   letter-spacing: 0.2rem;
+}
+header .logo table td h1 {
+  font-size: 3.5rem;
+  color: #f5dba6;
+  text-shadow: 1px 1px 3px black;
 }
 header .logo table td .nav_link:hover {
   color: #f5dba6;
 }
 header .logo table td img {
-  height: 100px;
+  height: 25vh;
   width: auto;
 }
 header nav {
@@ -93,36 +105,50 @@ header nav {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-pack: distribute;
-  justify-content: space-around;
+  justify-content: space-between;
   text-align: center;
   margin-right: 0%;
   text-transform: uppercase;
+  text-shadow: 1px 1px 3px black;
+  font-size: 2rem;
 }
 header nav:hover {
-  color: #f5dba6;
+  color: #be2d32;
 }
 header nav table {
   width: 100%;
-  max-width: 900px;
   margin: 0 auto;
   text-align: center;
   border: 2px solid none;
   border-collapse: collapse;
 }
+header nav table td:last-child a {
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+}
 header nav table td {
   border: 1px solid none;
   color: #eee;
   padding: 2.5rem;
-  font-family: 'KoHo', sans-serif;
+  font-family: 'Koulen', sans-serif;
   letter-spacing: 0.2rem;
+  font-size: 1.8rem;
 }
 header nav table td .nav_link:hover {
-  color: #f5dba6;
+  color: #be2d32;
 }
 header a {
   text-decoration: none;
   color: #eee;
-  font-family: 'KoHo', sans-serif;
+  font-family: 'Koulen', sans-serif;
+}
+header .btn {
+  font-size: 1.8rem;
+}
+header .btn:hover {
+  background-color: #f5dba6;
+  color: white;
+  cursor: pointer;
+  border-color: white;
 }
 /* -------------------------------------------------------------------------- */
 /*                                Main content                                */
@@ -131,80 +157,86 @@ header a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
   align-items: center;
   margin: auto;
   margin-top: 2%;
   width: 90%;
+  height: 60vh;
 }
 .home-main img {
-  height: 650px;
+  position: relative;
   width: auto;
+  height: 100%;
+  margin-right: 50px;
 }
 .home-main .home-content {
-  background-color: rgba(56, 51, 49, 0.6);
-  border-radius: 20px;
+  border-radius: 0px;
   padding-left: 5em;
   padding-right: 5em;
   padding-top: 2em;
   padding-bottom: 2em;
   text-align: left;
   text-transform: uppercase;
+  width: 40%;
 }
 .home-main .home-content h1 {
-  font-size: 2.5rem;
-  text-shadow: 1px 2px 3px black;
-  font-family: 'KoHo', sans-serif;
+  font-size: 8rem;
+  line-height: 7rem;
+  text-shadow: 1px 1px 3px black;
+  font-family: 'Koulen', sans-serif;
   padding: 0%;
   margin-top: 0%;
   margin-bottom: 2%;
-  letter-spacing: 0.15rem;
+  letter-spacing: 0.2rem;
+  color: #f5dba6;
 }
 .home-main .home-content h2 {
-  font-size: 1.2rem;
-  font-family: 'KoHo', sans-serif;
-  margin-bottom: 5%;
+  font-size: 1.5rem;
+  font-family: 'Koulen', sans-serif;
   letter-spacing: 0.15rem;
+  color: grey;
+  margin: 0;
 }
-.home-main .home-content .btn_xl {
-  margin-top: 50px;
+.home-main .home-content .btn_xl :hover {
+  color: white;
 }
 .home-main .home-content .btn_xl a {
   display: block;
-  width: 25%;
+  width: 50%;
+  padding: 0px 20px 0 20px;
+  border-radius: 10px;
 }
 .rules-main {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
-  margin: auto;
+  margin-left: 5%;
   margin-top: 5%;
   width: 90%;
 }
-.rules-main .rules-content {
-  background-color: rgba(56, 51, 49, 0.6);
-  border-radius: 20px;
-  padding-left: 10em;
-  padding-right: 10em;
-  padding-top: 3em;
-  padding-bottom: 3em;
-  text-align: left;
-  font-family: 'KoHo', sans-serif;
-}
-.rules-main .rules-content h1 {
-  font-size: 2.5rem;
-  text-shadow: 1px 2px 3px black;
+.rules-main h1 {
+  font-size: 7rem;
   padding: 0%;
   margin-bottom: 2%;
   margin-top: 0%;
   letter-spacing: 0.15rem;
   text-transform: uppercase;
+  color: #f5dba6;
+}
+.rules-main .rules-content {
+  line-height: 3rem;
+  width: 60%;
+  text-align: left;
+  font-family: 'Koulen', sans-serif;
+  text-shadow: 1px 1px 2px black;
 }
 .rules-main .rules-content p,
 .rules-main .rules-content ul li {
-  font-size: 18px;
+  list-style: none;
+  font-size: 1.6rem;
 }
 /* -------------------------------------------------------------------------- */
 /*                                   Footer                                   */
@@ -223,7 +255,7 @@ footer {
 footer p {
   font-size: 0.7rem;
   color: #eee;
-  font-family: 'KoHo', sans-serif;
+  font-family: 'Koulen', sans-serif;
   padding-bottom: 0%;
 }
 /* -------------------------------------------------------------------------- */
