--- a/public/CSS/style.less
+++ b/public/CSS/style.less
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Koulen&display=swap');
 
 /* -------------------------------------------------------------------------- */
 /*                               Some variables                               */
@@ -8,6 +9,7 @@
 @text-color: #eee;
 @bg-color: #383331;
 @primary-color: #f5dba6;
+@red: #be2d32;
 // @black: #000;
 @white : #eee;
 // @red : #a21c20;
@@ -17,7 +19,7 @@
 
 // Fonts
 @text-font: 'Aclonica';
-@primary-font: 'KoHo';
+@primary-font: 'Koulen';
 @secondary-font: sans-serif;
 
 /* -------------------------------------------------------------------------- */
@@ -31,8 +33,8 @@ body {
     -webkit-user-select: none;
 
     background-color: @bg-color;
-    background-image: url(/img/usine_bg.png);
-    background-size: contain;
+    background-image: url(/img/blob-haikei.svg);
+    background-size: cover;
     background-position: center;
     background-attachment: fixed;
     background-repeat: no-repeat;
@@ -44,15 +46,17 @@ body {
 }
 
 .btn_xl a {
-    font-size: 1.5rem;
-    color: @text-color;
+    font-size: 2.5rem;
+    color: @primary-color;
     text-decoration: none;
     text-align: center;
-    font-family: @text-font, @secondary-font;
-    border: 4px solid @primary-color;
+    font-family: "Koulen", @secondary-font;
+    border: 3px solid @primary-color;
     border-radius: 10px;
-    text-shadow: 1px 2px 3px #000;
-    padding: 1% 7% 1%;
+    text-shadow: 1px 1px 2px #000;
+    padding: 0% 5% 0%;
+    letter-spacing: .2rem;
+    font-weight: bold;
 
     &:hover {
         background-color: @primary-color;
@@ -67,14 +71,14 @@ h1 {
 
 .btn {
     font-size: 1.5rem;
-    padding-left: 30px;
-    padding-right: 30px;
+    padding-left: 50px;
+    padding-right: 50px;
     padding-bottom: 5px;
     padding-top: 5px;
-    border: 3px solid @primary-color;
+    border: 3px solid @red;
     border-radius: 10px;
-    background-color: @primary-color;
-    text-shadow: 1px 2px 3px black;
+    background-color: @red;
+    text-shadow: 1px 1px 3px black;
     cursor: pointer;
 }
 
@@ -87,29 +91,37 @@ header {
     display: -ms-flexbox;
     display: flex;
     -ms-flex-pack: distribute;
-    justify-content: space-around;
+    justify-content: space-between;
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
     background-color: @header-bg-color;
-    width: 75%;
+    width: 90%;
     margin: auto;
 
-
+    // background-color: red;
     .logo {
         table {
+            // background-color: green;
             width: 100%;
-            max-width: 900px;
+            // max-width: 900px;
             margin: 0 auto;
             text-align: center;
             border: 2px solid none;
             border-collapse: collapse;
 
             td {
+                h1 {
+                    font-size: 3.5rem;
+                    color:@primary-color;
+                    text-shadow: 1px 1px 3px black;
+                }
+
                 border: 1px solid none;
                 color: @text-color;
-                padding: 2.5rem;
-                font-family: @primary-font, @secondary-font;
+                // padding: 2.5rem;
+                font-family: @primary-font,
+                @secondary-font;
                 letter-spacing: 0.2rem;
 
                 .nav_link:hover {
@@ -117,7 +129,7 @@ header {
                 }
 
                 img {
-                    height: 100px;
+                    height: 25vh;
                     width: auto;
                 }
             }
@@ -129,22 +141,27 @@ header {
         display: -ms-flexbox;
         display: flex;
         -ms-flex-pack: distribute;
-        justify-content: space-around;
+        justify-content: space-between;
         text-align: center;
         margin-right: 0%;
         text-transform: uppercase;
+        text-shadow: 1px 1px 3px black;
+        font-size: 2rem;
 
         &:hover {
-            color: @primary-color;
+            color: @red;
         }
 
         table {
             width: 100%;
-            max-width: 900px;
             margin: 0 auto;
             text-align: center;
             border: 2px solid none;
             border-collapse: collapse;
+
+            td:last-child a {
+                box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+            }
 
             td {
                 border: 1px solid none;
@@ -152,9 +169,10 @@ header {
                 padding: 2.5rem;
                 font-family: @primary-font, @secondary-font;
                 letter-spacing: 0.2rem;
+                font-size: 1.8rem;
 
                 .nav_link:hover {
-                    color: @primary-color;
+                    color: @red;
                 }
             }
         }
@@ -164,6 +182,16 @@ header {
         text-decoration: none;
         color: @text-color;
         font-family: @primary-font, @secondary-font;
+    }
+    .btn{
+        font-size: 1.8rem;
+
+    }
+    .btn:hover{
+        background-color: @primary-color;
+        color:white;
+        cursor: pointer;
+        border-color: white;
     }
 
 }
@@ -178,50 +206,64 @@ header {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
     margin: auto;
     margin-top: 2%;
     width: 90%;
+    // background-color: red;
+    height:60vh;
 
     img {
-        height: 650px;
+        position: relative;
         width: auto;
+        height:100%;
+        margin-right: 50px;
     }
 
     .home-content {
-        background-color: rgba(56, 51, 49, 0.6);
-        border-radius: 20px;
+        // background-color: rgba(255, 72, 0, 0.6);
+        border-radius: 0px;
         padding-left: 5em;
         padding-right: 5em;
         padding-top: 2em;
         padding-bottom: 2em;
         text-align: left;
         text-transform: uppercase;
+        width:40%;
 
         h1 {
-            font-size: 2.5rem;
-            text-shadow: 1px 2px 3px black;
+            font-size: 8rem;
+            line-height:7rem;
+            text-shadow: 1px 1px 3px black;
             font-family: @primary-font, @secondary-font;
             padding: 0%;
             margin-top: 0%;
             margin-bottom: 2%;
-            letter-spacing: 0.15rem;
+            letter-spacing: 0.2rem;
+            color:@primary-color
         }
 
         h2 {
-            font-size: 1.2rem;
+            font-size: 1.5rem;
             font-family: @primary-font, @secondary-font;
-            margin-bottom: 5%;
+            // margin-bottom: 5%;
             letter-spacing: 0.15rem;
+            // text-shadow: 1px 1px 3px black;
+            color: grey;
+            margin: 0;
         }
 
         .btn_xl {
-            margin-top: 50px;
-
+            // margin-top: 50px;
+            :hover{
+                color:white
+            }
             a {
                 display: block;
-                width: 25%;
+                width: 50%;
+                padding: 0px 20px 0 20px;
+                border-radius: 10px;
             }
         }
     }
@@ -231,35 +273,33 @@ header {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
-    margin: auto;
+    margin-left:5%;
     margin-top: 5%;
     width: 90%;
 
+    h1 {
+        font-size: 7rem;
+        padding: 0%;
+        margin-bottom: 2%;
+        margin-top: 0%;
+        letter-spacing: 0.15rem;
+        text-transform: uppercase;
+        color: @primary-color;
+    }
     .rules-content {
-        background-color: rgba(56, 51, 49, 0.6);
-        border-radius: 20px;
-        padding-left: 10em;
-        padding-right: 10em;
-        padding-top: 3em;
-        padding-bottom: 3em;
+        line-height:3rem;
+        width:60%;
         text-align: left;
         font-family: @primary-font, @secondary-font;
+        text-shadow: 1px 1px 2px black;
 
-        h1 {
-            font-size: 2.5rem;
-            text-shadow: 1px 2px 3px black;
-            padding: 0%;
-            margin-bottom: 2%;
-            margin-top: 0%;
-            letter-spacing: 0.15rem;
-            text-transform: uppercase;
-        }
 
         p,
         ul li {
-            font-size: 18px;
+            list-style: none;
+            font-size: 1.6rem;
         }
     }
 }
