--- a/public/CSS/lobby.less
+++ b/public/CSS/lobby.less
@@ -26,8 +26,9 @@ body {
     -moz-user-select: none;
     -webkit-user-select: none;
 
-    background-color: @bg-color;
+    background:url("/img/wave-haikei.svg");
     background-attachment: fixed;
+    background-size: cover;
     background-repeat: no-repeat;
 
     color: @text-color;
