--- a/public/CSS/style.less
+++ b/public/CSS/style.less
@@ -253,6 +253,17 @@ header {
             color: grey;
             margin: 0;
         }
+        p{
+            font-size: 1.7rem;
+            line-height:1.7rem;
+            text-shadow: 1px 1px 2px rgb(105, 105, 105);
+            font-family: @primary-font, @secondary-font;
+            padding: 0%;
+            margin-top: 0%;
+            margin-bottom: 2%;
+            letter-spacing: 0.2rem;
+            color: @primary-color
+        }
 
         .btn_xl {
             // margin-top: 50px;
@@ -321,7 +332,7 @@ footer {
 
     p {
         font-size: 0.7rem;
-        color: @white;
+        color: whitesmoke;
         font-family: @primary-font, @secondary-font;
         padding-bottom: 0%;
     }
