--- a/views/index.ejs
+++ b/views/index.ejs
@@ -55,8 +55,9 @@
     <main class="home-main" id="home_main">
         <!-- Text displayed in the home page -->
         <section class="home-content">
-            <h1>Don't <br>Collapse</h1><br><br>
-            <h2>A game by Zephyr Studio</h2>
+            <h1>Don't <br>Collapse</h1>
+            <p>Gerez votre usine, soyez econome,<br> remportez la partie !</p><br><br>
+            <h2>Un jeu par Zephyr Studio</h2>
             
             <section class="btn_xl">
                 <a href="/lobby" title="Click to play">Jouer</a>
