--- a/views/lobby.ejs
+++ b/views/lobby.ejs
@@ -24,7 +24,7 @@
 
 <body>
     <main>
-        <h1>Welcome on lobby</h1>
+        <h1>Bienvenue sur le Lobby</h1>
 
         <!-- Scoreboard -->
         <section class="scoreboard" id="scoreboard">
@@ -32,7 +32,7 @@
                 <label for="pseudo_input">
                     <h2>Pseudo :</h2>
                 </label>
-                <input type="text" name="pseudo" placeholder="Jean Mich du 59" id="pseudo_input" />
+                <input type="text" name="pseudo" placeholder="Pseudo" id="pseudo_input" />
             </div>
         </section>
 
@@ -41,13 +41,13 @@
         <!-- Waiting player -->
         <nav class="games" id="games">
             <h2>
-                <ion-icon name="game-controller"></ion-icon>All waiting players :
+                <ion-icon name="game-controller"></ion-icon>Joueurs en attente :
             </h2>
 
             <!-- Button to host a new game -->
-            <div class="card" id="new_game" title="Click to host your own game">
+            <div class="card" id="new_game" title="Cliquer pour créer une partie">
                 <ion-icon name="globe-outline"></ion-icon>
-                <h3>Host my own game</h3>
+                <h3>Créer une partie</h3>
             </div>
             <section id="games-display"></section>
         </nav>
