--- a/public/CSS/hud.less
+++ b/public/CSS/hud.less
@@ -219,7 +219,8 @@ body {
 }
 
 body {
-    background-color: @bg-color;
+    background: url("/img/wave-haikei.svg");
+    background-size: cover;
     font-family: @primary-font, @secondary-font;
 
     color: @text-color;
@@ -532,11 +533,12 @@ body {
 /*                                    Chat                                    */
 /* -------------------------------------------------------------------------- */
 #chat-modal {
-    height: 700px;
-    width: 300px;
+    height: calc(100vh - 60px);
+    width: 35vw;
     max-width: 700px;
-    margin-left: 20px;
+    margin-left: 0px;
 
+    padding:20px;
     font-weight: bold;
 
     background-color: @bg-color;
@@ -546,26 +548,37 @@ body {
     overflow-y: auto;
 
     #chatForm {
+        margin-bottom:20px;
         display: flex;
         justify-content: space-between;
-
         input {
             background-color: @bg-color;
             color: @text-color;
             font-family: @primary-font, @secondary-font;
             font-size: medium;
             font-weight: bold;
-            border: 3px solid @primary-color;
+            border: 2px solid @primary-color;
             outline: none;
             box-shadow: 3px 3px 15px rgba(0, 0, 0, 0.3);
             height: 20px;
-            width: 70%;
-            padding: 5px 5px 5px 5px;
+            width: 80%;
+            padding: 10px;
             border-radius: 8px;
         }
 
         button {
             border-radius: 8px;
+            box-shadow: 3px 3px 15px rgba(0, 0, 0, 0.3);
+            padding: 10px;
+            color: @bg-color;
+            font-family: @primary-font, @secondary-font;
+            font-size: medium;
+            font-weight: bold;
+            outline: none;
+            border: 2px solid @primary-color;
+            width: calc(20% - 20px);
+            height: 100%;
+            margin-left:20px;
         }
     }
 
@@ -574,7 +587,7 @@ body {
         display: flex;
         flex-direction: column-reverse;
         color: @text-color;
-
+        font-size: large;
         .sender {
             display: grid;
             justify-content: right;
@@ -586,7 +599,7 @@ body {
         }
 
         .username {
-            font-size: small;
+            font-size: medium;
         }
 
         .host {
@@ -620,10 +633,14 @@ body {
     }
 
     button {
-        padding: 0;
+        // padding: 0 20px 0 20px;
+        // text-shadow: 1px 2px 3px black;
         cursor: pointer;
         border: 3px solid @primary-color;
         color: @bg-color;
+        font-size: 2rem;
+        font-family: @primary-font;
+        font-weight: bold;
         background-color: @primary-color;
 
         &:hover {
@@ -634,21 +651,23 @@ body {
     }
 
     #BtnGame {
+        padding: 0 20px 0 20px;
         width: 50%;
         height: 70px;
         margin: auto;
         border-radius: 10px;
-        font-size: 1em;
+        font-size: 1.2em;
         margin-top: 5em;
     }
 
     #chat-button {
-        width: 35%;
+        width: 50%;
         height: 50px;
+        padding: 0 40px 0 40px;
         display: block;
         margin: auto;
         border-radius: 8px;
-        font-size: 1em;
+        font-size: 1.2em;
         margin-top: 2em;
     }
 
@@ -661,12 +680,12 @@ body {
 
     .card {
         box-shadow: 3px 3px 15px rgba(0, 0, 0, 0.3);
-        border: 3px solid @primary-color;
+        border-left: 3px solid @primary-color;
         margin-bottom: 2em;
         padding: 10px;
         padding-right: 30px;
         padding-left: 30px;
-        border-radius: 10px;
+        // border-radius: 10px;
         align-items: center;
         font-family: @primary-font, @secondary-font;
         display: flex;
