--- a/public/CSS/hud.css
+++ b/public/CSS/hud.css
@@ -212,22 +212,30 @@ body h1 {
 /* -------------------------------------------------------------------------- */
 /*                                Progress Bar                                */
 /* -------------------------------------------------------------------------- */
+#game {
+  position: relative;
+  z-index: 15;
+}
 #top {
   display: flex;
   align-items: flex-start;
-  justify-content: space-around;
+  flex-direction: column;
   position: relative;
-  z-index: 2;
+  z-index: 15;
+  width: 80%;
+  margin-left: 10%;
 }
 #top .containers {
+  width: 100%;
   display: flex;
-  flex-direction: column;
-}
-#top .containers div {
-  display: flex;
+  justify-content: space-between;
   flex-direction: row;
+  margin-left: 50%;
+  transform: translateX(-50%);
+  text-align: center;
 }
 #top .containers p {
+  text-shadow: 1px 2px 3px black;
   position: relative;
   top: 0;
   /* margin-top: 50%; */
@@ -237,11 +245,25 @@ body h1 {
   /* text-transform: uppercase; */
   font-size: 20px;
 }
+#top .containers .txtMoney {
+  margin: 0;
+  text-shadow: 1px 2px 3px black;
+  top: 0;
+  /* margin-top: 50%; */
+  font-weight: bold;
+  /* text-transform: uppercase; */
+  font-size: 20px;
+  padding: 10px 50px 10px 50px;
+  border: white 2px solid;
+  border-radius: 10px;
+  background-color: rgba(0, 0, 0, 0.356);
+}
 #top .containers .progress-container {
   border: solid #ff0000 2px;
   height: 30px;
   width: 400px;
-  border-radius: 10px;
+  margin-right: 20px;
+  border-radius: 5px;
   margin-top: 5px;
   margin-bottom: 5px;
   background: linear-gradient(90deg, rgba(0, 0, 0, 0.356) 0%, #ff0000 55%, rgba(0, 0, 0, 0.356) 56%, rgba(0, 0, 0, 0.356) 100%);
@@ -249,17 +271,25 @@ body h1 {
   font-size: x-large;
   font-style: bolder;
   color: #eee;
+  align-items: center;
 }
 #top .containers .progress-container .progress {
-  box-shadow: -3px 0px 15px 1px rgba(0, 0, 0, 0.49);
-  height: 30px;
-  width: 30px;
+  height: 34px;
+  width: 34px;
   border-radius: 100%;
   background-color: #ff0000;
-  margin-left: calc(55% - 15px);
-  z-index: 1;
+  margin-left: calc(55% - 17px);
+  z-index: 12;
+  align-items: center;
+  display: flex;
+  margin-top: -2px;
 }
 #top .containers .progress-container .text {
+  text-align: center;
+}
+#top .containers .containedBy {
+  display: flex;
+  flex-direction: column;
   text-align: center;
 }
 .button {
