--- a/public/CSS/hud.less
+++ b/public/CSS/hud.less
@@ -259,27 +259,33 @@ body {
 /* -------------------------------------------------------------------------- */
 /*                                Progress Bar                                */
 /* -------------------------------------------------------------------------- */
+#game {
+    position: relative;
+    z-index: 15;
+}
 
 #top {
     display: flex;
     align-items: flex-start;
-    justify-content: space-around;
+    flex-direction: column;
     position: relative;
-    z-index: 2;
+    z-index: 15;
+    width: 80%;
+    margin-left: 10%;
 
     .containers {
+        width: 100%;
         display: flex;
-        flex-direction: column;
+        justify-content: space-between;
+        flex-direction: row;
         @colorProgress : rgb(255, 0, 0);
+        margin-left:50%;
+        transform: translateX(-50%);
+        text-align: center;
 
-        div {
-            display: flex;
-            flex-direction: row;
-
-        }
 
         p {
-
+            text-shadow: 1px 2px 3px black;
             position: relative;
             top: 0;
             /* margin-top: 50%; */
@@ -290,11 +296,27 @@ body {
             font-size: 20px;
         }
 
+        .txtMoney {
+            margin:0;
+            text-shadow: 1px 2px 3px black;
+            top: 0;
+            /* margin-top: 50%; */
+            font-weight: bold;
+            /* text-transform: uppercase; */
+            font-size: 20px;
+            padding: 10px 50px 10px 50px;
+            border:white 2px solid;
+            border-radius:10px;
+            background-color:rgba(0,0,0,0.356)
+
+        }
+
         .progress-container {
             border: solid @colorProgress 2px;
             height: 30px;
             width: 400px;
-            border-radius: 10px;
+            margin-right: 20px;
+            border-radius: 5px;
             margin-top: 5px;
             margin-bottom: 5px;
             background: linear-gradient(90deg, rgba(0, 0, 0, 0.356) 0%, @colorProgress 55%, rgba(0, 0, 0, 0.356) 56%, rgba(0, 0, 0, 0.356) 100%);
@@ -302,20 +324,33 @@ body {
             font-size: x-large;
             font-style: bolder;
             color: @text-color;
+            align-items: center;
 
             .progress {
-                box-shadow: -3px 0px 15px 1px rgba(0, 0, 0, 0.49);
-                height: 30px;
-                width: 30px;
+                // box-shadow: -3px 0px 15px 1px rgba(0, 0, 0, 0.49);
+                height: 34px;
+                width: 34px;
                 border-radius: 100%;
                 background-color: @colorProgress;
-                margin-left: calc(55% - 15px);
-                z-index: 1;
+                margin-left: calc(55% - 17px);
+                z-index: 12;
+                // position: absolute;
+                align-items: center;
+                display: flex;
+                margin-top: -2px;
+
             }
 
             .text {
                 text-align: center;
             }
+        }
+
+        .containedBy {
+            display: flex;
+            flex-direction: column;
+            text-align: center;
+
         }
 
     }
@@ -538,7 +573,7 @@ body {
     max-width: 700px;
     margin-left: 0px;
 
-    padding:20px;
+    padding: 20px;
     font-weight: bold;
 
     background-color: @bg-color;
@@ -548,9 +583,10 @@ body {
     overflow-y: auto;
 
     #chatForm {
-        margin-bottom:20px;
+        margin-bottom: 20px;
         display: flex;
         justify-content: space-between;
+
         input {
             background-color: @bg-color;
             color: @text-color;
@@ -578,7 +614,7 @@ body {
             border: 2px solid @primary-color;
             width: calc(20% - 20px);
             height: 100%;
-            margin-left:20px;
+            margin-left: 20px;
         }
     }
 
@@ -588,6 +624,7 @@ body {
         flex-direction: column-reverse;
         color: @text-color;
         font-size: large;
+
         .sender {
             display: grid;
             justify-content: right;
