--- a/views/lobby.ejs
+++ b/views/lobby.ejs
@@ -32,7 +32,7 @@
                 <label for="pseudo_input">
                     <h2>Pseudo :</h2>
                 </label>
-                <input type="text" name="pseudo" placeholder="Pseudo" id="pseudo_input" />
+                <input type="text" name="pseudo" placeholder="Pseudo" id="pseudo_input" autofocus />
             </div>
         </section>
 
